--- a/at_test/Pages/Produto/ExibirProdutos.cshtml
+++ b/at_test/Pages/Produto/ExibirProdutos.cshtml
@@ -25,7 +25,7 @@
             <tr>
                 <td class="align-middle">@produto.Id</td>
                 <td class="align-middle">
-                    <img src="~/images/produtos/@produto.NomeImagem" style="width: 100px" />
+                    <img src="~/images/produtos/@produto.NomeImagem" title="@produto.Nome" style="width: 100px" />
                 </td>
                 <td class="align-middle">@produto.Nome</td>
                 <td class="align-middle">@produto.Descricao</td>
