--- a/at_test/Pages/Produto/ExibirProdutos.cshtml
+++ b/at_test/Pages/Produto/ExibirProdutos.cshtml
@@ -34,7 +34,7 @@
                 <td class="align-middle">
                     <a class="btn btn-primary" asp-page="EditarProduto" asp-route-id="@produto.Id">Editar</a>
                     <span>Ação 2</span>
-                    <span>Ação 3</span>
+                    <a class="btn btn-danger" asp-page="DeletarProduto" asp-route-id="@produto.Id">Deletar</a>
                 </td>
             </tr>
         }
