pagina para adicionar produto implementada

--- a/at_test/Pages/Produto/ExibirProdutos.cshtml
+++ b/at_test/Pages/Produto/ExibirProdutos.cshtml
@@ -7,6 +7,8 @@
 
 <hr />
 
+<a asp-page="/Produto/AdicionarProduto" class="btn btn-primary">Adicionar</a>
+
 <table class="table table-striped table-borderless">
     <thead>
         <tr>
