--- a/at_test/Pages/Shared/_Layout.cshtml
+++ b/at_test/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Produto/ExibirProdutos">Produtos</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Cliente/ExibirClientes">Clientes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
