pagina para adicionar cliente e logica para adicionar implementada

--- a/at_test/Pages/Produto/AdicionarProduto.cshtml
+++ b/at_test/Pages/Produto/AdicionarProduto.cshtml
@@ -3,6 +3,10 @@
 @{
 }
 
+<h1>Adicionar Produto</h1>
+
+<hr />
+
 <div class="row">
     <div class="col-md-6">
         <form asp-action="Add" enctype="multipart/form-data">
@@ -33,4 +37,3 @@
         </form>
     </div>
 </div>
-
