estilizacao nas paginas

--- a/at_test/Pages/Cliente/AdicionarCliente.cshtml
+++ b/at_test/Pages/Cliente/AdicionarCliente.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Cliente/Adicionar"
 @model at_test.Pages.Cliente.AdicionarClienteModel
 @{
+    ViewData["Title"] = "Adicionar";
 }
 
 <h1>Adicionar cliente</h1>
