--- a/at_test/Pages/Cliente/DeletarCliente.cshtml
+++ b/at_test/Pages/Cliente/DeletarCliente.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Cliente/Deletar/{id:int}"
 @model at_test.Pages.Cliente.DeletarClienteModel
 @{
+    ViewData["Title"] = "Deletar";
 }
 
 <h1>Tem certeza que deseja excluir?</h1>
