--- a/at_test/Pages/Cliente/EditarCliente.cshtml
+++ b/at_test/Pages/Cliente/EditarCliente.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Cliente/Editar/{id:int}"
 @model at_test.Pages.Cliente.EditarClienteModel
 @{
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Editar</h1>
