--- a/at_test/Pages/Cliente/ExibirClientes.cshtml
+++ b/at_test/Pages/Cliente/ExibirClientes.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Cliente/Exibir"
 @model at_test.Pages.Cliente.ExibirClientesModel
 @{
+    ViewData["Title"] = "Clientes";
 }
 
 <h1>Clientes</h1>
