--- a/at_test/Pages/Produto/AdicionarProduto.cshtml
+++ b/at_test/Pages/Produto/AdicionarProduto.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Produto/Adicionar"
 @model at_test.Pages.Produto.AdicionarProdutoModel
 @{
+    ViewData["Title"] = "Adicionar";
 }
 
 <h1>Adicionar Produto</h1>
