--- a/at_test/Pages/Produto/DeletarProduto.cshtml
+++ b/at_test/Pages/Produto/DeletarProduto.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Produto/Deletar/{id:int}"
 @model at_test.Pages.Produto.DeletarProdutoModel
 @{
+    ViewData["Title"] = "Deletar";
 }
 
 <h1>Tem certeza que deseja excluir?</h1>
