--- a/at_test/Pages/Produto/DetalhesProduto.cshtml
+++ b/at_test/Pages/Produto/DetalhesProduto.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Produto/Detalhes/{id:int}"
 @model at_test.Pages.Produto.DetalhesProdutoModel
 @{
+    ViewData["Title"] = "Detalhes";
 }
 
 <h1>Mais informações</h1>
