--- a/at_test/Pages/Produto/ExibirProdutos.cshtml
+++ b/at_test/Pages/Produto/ExibirProdutos.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Produto/Exibir"
 @model at_test.Pages.Produto.ExibirProdutosModel
 @{
+    ViewData["Title"] = "Produtos";
 }
 
 <h1>Produtos</h1>
