--- a/at_test/Pages/Cliente/DetalhesCliente.cshtml
+++ b/at_test/Pages/Cliente/DetalhesCliente.cshtml
@@ -1,6 +1,7 @@
-﻿@page "/Cliente/Detalhes"
+﻿@page "/Cliente/Detalhes/{id:int}"
 @model at_test.Pages.Cliente.DetalhesClienteModel
 @{
+    ViewData["Title"] = "Detalhes";
 }
 
 <h1>Mais informações</h1>
