--- a/at_test/Pages/Produto/EditarProduto.cshtml
+++ b/at_test/Pages/Produto/EditarProduto.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/Produto/Editar/{id:int}"
 @model at_test.Pages.Produto.EditarProdutoModel
 @{
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Editar</h1>
