alternando conteudo footer com @section

--- a/at_test/Pages/Cliente/ExibirClientes.cshtml
+++ b/at_test/Pages/Cliente/ExibirClientes.cshtml
@@ -39,3 +39,13 @@
         }
     </tbody>
 </table>
+
+@section ClienteFooter
+{
+    <p>
+        <a class="text-muted text-decoration-none hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Sobre">Sobre Nós</a>
+    </p>
+    <p>
+        <a class="text-muted text-decoration-none hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Produto/ExibirProdutos">Produtos</a>
+    </p>
+}
