--- a/at_test/Pages/Produto/ExibirProdutos.cshtml
+++ b/at_test/Pages/Produto/ExibirProdutos.cshtml
@@ -43,3 +43,13 @@
         }
     </tbody>
 </table>
+
+@section ProdutoFooter
+{
+    <p>
+        <a class="text-muted text-decoration-none hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Sobre">Sobre Nós</a>
+    </p>
+    <p>
+        <a class="text-muted text-decoration-none hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Cliente/ExibirClientes">Clientes</a>
+    </p>
+}
