--- a/at_test/Pages/Sobre.cshtml
+++ b/at_test/Pages/Sobre.cshtml
@@ -28,3 +28,13 @@
 <p>Somos uma parte ativa e integrante da comunidade esportiva local. Acreditamos no poder do esporte para unir pessoas e estamos empenhados em apoiar eventos, equipes e iniciativas que promovam um estilo de vida ativo e saudável em nossa região.</p>
 
 <p>Visite-nos e faça parte da experiência Esportiva. Estamos ansiosos para ajudar você a alcançar seus objetivos esportivos e fazer parte da sua jornada rumo ao bem-estar e à excelência esportiva.</p>
+
+@section SobreFooter
+{
+    <p>
+        <a class="text-muted text-decoration-none hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Produto/ExibirProdutos">Produtos</a>
+    </p>
+    <p>
+        <a class="text-muted text-decoration-none hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Cliente/ExibirClientes">Clientes</a>
+    </p>
+}
