--- a/at_test/Pages/Produto/DetalhesProduto.cshtml
+++ b/at_test/Pages/Produto/DetalhesProduto.cshtml
@@ -14,7 +14,7 @@
             Ilustração
         </dt>
         <dd class="col-sm-10">
-            <img src="~/images/produtos/@Model.Produto.NomeImagem" title="@Model.Produto.Nome" />
+            <img class="img-300" src="~/images/produtos/@Model.Produto.NomeImagem" title="@Model.Produto.Nome" />
         </dd>
         <dt class="col-sm-2">
             Código
