exibindo total de clientes e produtos

--- a/at_test/Pages/Cliente/ExibirClientes.cshtml
+++ b/at_test/Pages/Cliente/ExibirClientes.cshtml
@@ -38,6 +38,14 @@
             </tr>
         }
     </tbody>
+    <tfoot>
+        <tr>
+            <td class="text-end fw-bolder" colspan="5">
+                Total de Clientes:
+            </td>
+            <td class="text-end fw-bolder">@Model.Clientes.Count()</td>
+        </tr>
+    </tfoot>
 </table>
 
 @section ClienteFooter
