--- a/at_test/Pages/Produto/ExibirProdutos.cshtml
+++ b/at_test/Pages/Produto/ExibirProdutos.cshtml
@@ -42,6 +42,14 @@
             </tr>
         }
     </tbody>
+    <tfoot>
+        <tr>
+            <td class="text-end fw-bolder" colspan="6">
+                Total de Produtos:
+            </td>
+            <td class="text-end fw-bolder">@Model.Produtos.Count()</td>
+        </tr>
+    </tfoot>
 </table>
 
 @section ProdutoFooter
