--- a/at_test/Pages/Produto/DetalhesProduto.cshtml
+++ b/at_test/Pages/Produto/DetalhesProduto.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.Produto.Id)
         </dd>
         <dt class="col-sm-2">
+            Data de Registro
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Produto.DataRegistro)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Produto.Nome)
         </dt>
         <dd class="col-sm-10">
