adicionando propriedade DataRegistro ao Produto e validacao do lado so cliente implementada

--- a/at_test/Pages/Cliente/AdicionarCliente.cshtml
+++ b/at_test/Pages/Cliente/AdicionarCliente.cshtml
@@ -14,14 +14,17 @@
             <div class="mb-3">
                 <label asp-for="NovoCliente.Nome">Nome</label>
                 <input asp-for="NovoCliente.Nome" class="form-control" />
+                <span asp-validation-for="NovoCliente.Nome" class="text-danger" />
             </div>
             <div class="mb-3">
                 <label asp-for="NovoCliente.Cpf">CPF</label>
                 <input asp-for="NovoCliente.Cpf" class="form-control" />
+                <span asp-validation-for="NovoCliente.DataNascimento" class="text-danger" />
             </div>
             <div class="mb-3">
                 <label asp-for="NovoCliente.DataNascimento">Data de Nascimento</label>
                 <input asp-for="NovoCliente.DataNascimento" class="form-control" />
+                <span asp-validation-for="NovoCliente.DataNascimento" class="text-danger" />
             </div>
             <div class="mb-3">
                 <button class="btn btn-success">Adicionar</button>
