correcao na mensagem de validacao do CPF ao adicionar cliente

--- a/at_test/Pages/Cliente/AdicionarCliente.cshtml
+++ b/at_test/Pages/Cliente/AdicionarCliente.cshtml
@@ -19,7 +19,7 @@
             <div class="mb-3">
                 <label asp-for="NovoCliente.Cpf">CPF</label>
                 <input asp-for="NovoCliente.Cpf" class="form-control" />
-                <span asp-validation-for="NovoCliente.DataNascimento" class="text-danger" />
+                <span asp-validation-for="NovoCliente.Cpf" class="text-danger" />
             </div>
             <div class="mb-3">
                 <label asp-for="NovoCliente.DataNascimento">Data de Nascimento</label>
