--- a/at_test/Pages/Shared/_Layout.cshtml
+++ b/at_test/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,13 @@
                             <a class="nav-link hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Produto/ExibirProdutos">Produtos</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Produto/AdicionarProduto">Adicionar Produto</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Cliente/ExibirClientes">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link hover-underline fw-bolder color-esportiva" asp-area="" asp-page="/Cliente/AdicionarCliente">Adicionar Cliente</a>
                         </li>
                     </ul>
                 </div>
@@ -39,7 +45,7 @@
         </nav>
     </header>
     <div class="container container-main">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-5">
             @RenderBody()
         </main>
     </div>
